--- a/index.html
+++ b/index.html
@@ -82,7 +82,14 @@
 								</div>
 							</section>
 
-						
+							<section id="three" class="wrapper spotlight style3">
+								<div class="inner">
+									<div class="content">
+										<h2 class="major">Resume</h2>
+										<iframe src="https://resume.creddle.io/embed/65bev7qt0bi" width="850" height="1100" seamless></iframe>
+									</div>
+								</div>
+									</section>
 
 				<!-- Footer -->
 					<section id="footer">
@@ -110,12 +117,12 @@
 							</form>
 							<ul class="contact">
 								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
+									Mimi Hoang<br />
+									Orlando, FL<br />
+									
 								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+								<li class="icon solid fa-phone">1800-Nun-Your</li>
+								<li class="icon solid fa-envelope"><a href="#">mimihoang619@gmail.com</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Mimi INC. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
