added labs project

--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
 									</div>
 								</div>
 									</section>
+							
+									<section id="four" class="wrapper spotlight style3">
+										<div class="inner">
+											<div class="content">
+												<h2 class="major">Labs Project</h2>
+												<a href="https://github.com/Lambda-School-Labs/miracle-messages-fe" class = "special">Helping our outside neighbors</a>
+											</div>
+										</div>
+											</section>
 
 				<!-- Footer -->
 					<section id="footer">
