--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 											<div class="content">
 												<h2 class="major">Labs Project</h2>
 												<a href="https://github.com/Lambda-School-Labs/miracle-messages-fe" class = "special">Helping our outside neighbors</a>
+												<a href="#" class="image"><img src="images/Miracle+Messages.jpg" alt=""/></a>
 											</div>
 										</div>
 											</section>
