--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 										<div class="inner">
 											<div class="content">
 												<h2 class="major">Labs Project</h2>
-												<a href="https://github.com/Lambda-School-Labs/miracle-messages-fe" class = "special">Helping our outside neighbors</a>
-												<a href="#" class="image"><img src="images/Miracle+Messages.jpg" alt=""/></a>
+												<a href="https://github.com/Lambda-School-Labs/tagger-fe" class = "special">A beefed up email client</a>
+												<a href="#" class="image"><img src="images/tagger.png" alt=""/></a>
 											</div>
 										</div>
 											</section>
